--- a/.github/workflows/seed-dev-branch.yml
+++ b/.github/workflows/seed-dev-branch.yml
@@ -4,7 +4,12 @@ on:
   workflow_dispatch:
     inputs:
       include_auth:
-        description: 'Include auth.users data'
+        description: 'Include auth.users data (not recommended with Clerk)'
+        required: false
+        default: 'false'
+        type: boolean
+      apply_migrations:
+        description: 'Apply migrations before seeding'
         required: false
         default: 'true'
         type: boolean
@@ -12,10 +17,14 @@ on:
 env:
   SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
   SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+  # AWS region for Supavisor pooler (us-west-1 for West US/North California)
+  SUPABASE_REGION: us-west-1
+  # Development branch ID (development-v2)
+  DEV_BRANCH_ID: "17b178b9-bb9b-4ccd-a125-5e49398bb989"
 
 jobs:
   seed-dev-branch:
-    name: Seed Development-v2 with Full Data
+    name: Seed Development-v2 with Production Data
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -29,63 +38,87 @@ jobs:
       - name: Install PostgreSQL client
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client
+          sudo apt-get install -y postgresql-client-15
 
       - name: Authenticate with Supabase
         run: |
           supabase login --token ${{ secrets.SUPABASE_ACCESS_TOKEN }}
 
-      - name: Link to Project
+      - name: Link to Supabase Project
         run: |
           supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_ID }}
 
-      - name: Link to Development-v2 Branch
+      - name: Get Development Branch Database Info
+        id: get-dev-db
         run: |
-          echo "🔗 Linking to development-v2 branch..."
+          echo "🔍 Getting development branch database info..."
 
-          DEV_BRANCH_ID="17b178b9-bb9b-4ccd-a125-5e49398bb989"
+          # Get branch details using experimental flag
+          BRANCH_INFO=$(supabase --experimental branches get $DEV_BRANCH_ID --project-ref ${{ secrets.SUPABASE_PROJECT_ID }} --output json 2>/dev/null || echo "{}")
 
-          # Switch to the development-v2 branch
-          supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_ID }} --branch $DEV_BRANCH_ID --experimental
+          echo "📋 Branch info received"
 
-          echo "✅ Linked to development-v2"
+          # Extract the branch reference from SUPABASE_URL
+          BRANCH_URL=$(echo "$BRANCH_INFO" | jq -r '.SUPABASE_URL // empty' 2>/dev/null || echo "")
+
+          if [ -n "$BRANCH_URL" ]; then
+            # Extract branch ref from URL (e.g., https://jczngsvpywgrlgdwzjbr.supabase.co -> jczngsvpywgrlgdwzjbr)
+            BRANCH_REF=$(echo "$BRANCH_URL" | sed -n 's|https://\([^.]*\)\.supabase\.co|\1|p')
+            echo "📋 Branch ref: $BRANCH_REF"
+            echo "branch_ref=$BRANCH_REF" >> $GITHUB_OUTPUT
+          else
+            echo "⚠️ Could not get branch URL, using hardcoded ref"
+            echo "branch_ref=jczngsvpywgrlgdwzjbr" >> $GITHUB_OUTPUT
+          fi
+
+          echo "db_name=postgres" >> $GITHUB_OUTPUT
+
+      - name: Build Connection URLs
+        id: build-urls
+        run: |
+          echo "🔧 Building Supavisor connection URLs..."
+
+          # Production DB URL
+          PROD_URL="postgres://postgres.${{ secrets.SUPABASE_PROJECT_ID }}:${{ secrets.SUPABASE_DB_PASSWORD }}@aws-0-${SUPABASE_REGION}.pooler.supabase.com:5432/postgres"
+
+          # Development DB URL
+          DEV_DB_NAME="${{ steps.get-dev-db.outputs.db_name }}"
+          DEV_URL="postgres://postgres.${{ secrets.SUPABASE_PROJECT_ID }}:${{ secrets.SUPABASE_DB_PASSWORD }}@aws-0-${SUPABASE_REGION}.pooler.supabase.com:5432/${DEV_DB_NAME}"
+
+          echo "prod_url=$PROD_URL" >> $GITHUB_OUTPUT
+          echo "dev_url=$DEV_URL" >> $GITHUB_OUTPUT
+          echo "✅ Connection URLs configured"
 
       - name: Apply Migrations to Development-v2
+        if: inputs.apply_migrations == true || inputs.apply_migrations == 'true'
         run: |
           echo "📦 Applying migrations to development-v2..."
 
-          # Use supabase db push which should work in GitHub Actions
-          # The --linked flag uses the branch we just linked to
-          supabase db push --linked --debug || {
-            echo "⚠️  db push had warnings, checking if migrations were applied..."
+          # Use supabase db push to apply migrations
+          supabase db push --linked --debug 2>&1 | head -100 || {
+            echo "⚠️ db push had warnings, verifying tables exist..."
 
-            # Verify migrations were applied by checking if tables exist
-            DEV_BRANCH_ID="17b178b9-bb9b-4ccd-a125-5e49398bb989"
-            BRANCH_INFO=$(supabase branches get $DEV_BRANCH_ID --project-ref ${{ secrets.SUPABASE_PROJECT_ID }} --output json --experimental)
-            NON_POOLING_URL=$(echo "$BRANCH_INFO" | jq -r '.POSTGRES_URL_NON_POOLING // empty')
-            DB_NAME=$(echo "$NON_POOLING_URL" | sed -n 's/.*\/\([^?]*\).*/\1/p')
-            DEV_DB_URL="postgres://postgres.${{ secrets.SUPABASE_PROJECT_ID }}:${{ secrets.SUPABASE_DB_PASSWORD }}@aws-0-us-west-1.pooler.supabase.com:5432/$DB_NAME"
-
-            # Check if profiles table exists
-            if psql "$DEV_DB_URL" -c "SELECT 1 FROM profiles LIMIT 1" 2>/dev/null; then
-              echo "✅ Migrations were applied successfully"
+            # Check if key tables exist
+            DEV_URL="${{ steps.build-urls.outputs.dev_url }}"
+            if psql "$DEV_URL" -c "SELECT 1 FROM profiles LIMIT 1" 2>/dev/null; then
+              echo "✅ Tables exist, migrations appear to be applied"
             else
-              echo "❌ Migrations failed to apply"
+              echo "❌ Tables don't exist, migrations may have failed"
               exit 1
             fi
           }
 
           echo "✅ Migrations applied"
 
-      - name: Export Production Schema and Data
+      - name: Export Production Data
+        id: export-data
         run: |
-          echo "📦 Exporting production database (schema + data)..."
+          echo "📦 Exporting production data..."
 
-          # Supavisor Session Mode (port 5432) for IPv4 compatibility
-          PROD_DB_URL="postgres://postgres.${{ secrets.SUPABASE_PROJECT_ID }}:${{ secrets.SUPABASE_DB_PASSWORD }}@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+          PROD_URL="${{ steps.build-urls.outputs.prod_url }}"
 
-          # Export public schema with data
-          pg_dump "$PROD_DB_URL" \
+          # Export public schema data only
+          pg_dump "$PROD_URL" \
             --no-owner \
             --no-privileges \
             --schema=public \
@@ -95,16 +128,17 @@ jobs:
 
           DUMP_SIZE=$(du -h production_data.dump | cut -f1)
           echo "✅ Production data exported: $DUMP_SIZE"
+          echo "dump_size=$DUMP_SIZE" >> $GITHUB_OUTPUT
 
       - name: Export Auth Users (if enabled)
         if: inputs.include_auth == true || inputs.include_auth == 'true'
         run: |
           echo "📦 Exporting auth.users..."
+          echo "⚠️ Note: With Clerk auth, you should use clerk_user_mapping table instead"
 
-          PROD_DB_URL="postgres://postgres.${{ secrets.SUPABASE_PROJECT_ID }}:${{ secrets.SUPABASE_DB_PASSWORD }}@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+          PROD_URL="${{ steps.build-urls.outputs.prod_url }}"
 
-          # Export auth schema separately (users, identities, sessions)
-          pg_dump "$PROD_DB_URL" \
+          pg_dump "$PROD_URL" \
             --no-owner \
             --no-privileges \
             --schema=auth \
@@ -117,27 +151,49 @@ jobs:
           AUTH_SIZE=$(du -h auth_data.dump | cut -f1)
           echo "✅ Auth data exported: $AUTH_SIZE"
 
+      - name: Prepare Development Database
+        run: |
+          echo "🔧 Preparing development database..."
+
+          DEV_URL="${{ steps.build-urls.outputs.dev_url }}"
+
+          psql "$DEV_URL" <<'EOF' || true
+          -- Disable triggers
+          SET session_replication_role = replica;
+
+          -- Drop FK constraints that cause issues
+          ALTER TABLE IF EXISTS meeting_action_items DROP CONSTRAINT IF EXISTS meeting_action_items_task_id_fkey CASCADE;
+          ALTER TABLE IF EXISTS next_action_suggestions DROP CONSTRAINT IF EXISTS next_action_suggestions_created_task_id_fkey CASCADE;
+
+          -- Truncate public tables
+          DO $$
+          DECLARE
+            r RECORD;
+          BEGIN
+            FOR r IN (SELECT tablename FROM pg_tables WHERE schemaname = 'public' AND tablename NOT LIKE 'pg_%')
+            LOOP
+              EXECUTE 'TRUNCATE TABLE public.' || quote_ident(r.tablename) || ' CASCADE';
+            END LOOP;
+          END $$;
+          EOF
+
+          echo "✅ Development database prepared"
+
       - name: Restore Data to Development-v2
         run: |
-          echo "🔄 Restoring data to development-v2..."
+          echo "🔄 Restoring public schema data..."
 
-          # Get development-v2 connection
-          DEV_BRANCH_ID="17b178b9-bb9b-4ccd-a125-5e49398bb989"
-          BRANCH_INFO=$(supabase branches get $DEV_BRANCH_ID --project-ref ${{ secrets.SUPABASE_PROJECT_ID }} --output json --experimental || echo "{}")
-          NON_POOLING_URL=$(echo "$BRANCH_INFO" | jq -r '.POSTGRES_URL_NON_POOLING // empty')
-          DB_NAME=$(echo "$NON_POOLING_URL" | sed -n 's/.*\/\([^?]*\).*/\1/p')
-          DEV_DB_URL="postgres://postgres.${{ secrets.SUPABASE_PROJECT_ID }}:${{ secrets.SUPABASE_DB_PASSWORD }}@aws-0-us-west-1.pooler.supabase.com:5432/$DB_NAME"
+          DEV_URL="${{ steps.build-urls.outputs.dev_url }}"
 
-          # Restore public schema data
-          echo "📥 Restoring public schema data..."
           pg_restore \
-            --dbname="$DEV_DB_URL" \
+            --dbname="$DEV_URL" \
             --no-owner \
             --no-privileges \
             --disable-triggers \
+            --data-only \
             --verbose \
-            production_data.dump 2>&1 | head -50 || {
-              echo "⚠️  Restore completed with warnings"
+            production_data.dump 2>&1 | grep -E "(processing|restoring|error)" | head -50 || {
+              echo "⚠️ Restore completed with warnings"
             }
 
           echo "✅ Public data restored"
@@ -147,49 +203,56 @@ jobs:
         run: |
           echo "🔄 Restoring auth.users..."
 
-          DEV_BRANCH_ID="17b178b9-bb9b-4ccd-a125-5e49398bb989"
-          BRANCH_INFO=$(supabase branches get $DEV_BRANCH_ID --project-ref ${{ secrets.SUPABASE_PROJECT_ID }} --output json --experimental || echo "{}")
-          NON_POOLING_URL=$(echo "$BRANCH_INFO" | jq -r '.POSTGRES_URL_NON_POOLING // empty')
-          DB_NAME=$(echo "$NON_POOLING_URL" | sed -n 's/.*\/\([^?]*\).*/\1/p')
-          DEV_DB_URL="postgres://postgres.${{ secrets.SUPABASE_PROJECT_ID }}:${{ secrets.SUPABASE_DB_PASSWORD }}@aws-0-us-west-1.pooler.supabase.com:5432/$DB_NAME"
+          DEV_URL="${{ steps.build-urls.outputs.dev_url }}"
 
-          # Restore auth schema data
-          echo "📥 Restoring auth schema data..."
           pg_restore \
-            --dbname="$DEV_DB_URL" \
+            --dbname="$DEV_URL" \
             --no-owner \
             --no-privileges \
             --disable-triggers \
+            --data-only \
             --verbose \
             auth_data.dump 2>&1 | head -50 || {
-              echo "⚠️  Auth restore completed with warnings"
+              echo "⚠️ Auth restore completed with warnings"
             }
 
           echo "✅ Auth data restored"
+
+      - name: Restore Constraints
+        run: |
+          echo "🔧 Restoring constraints..."
+
+          DEV_URL="${{ steps.build-urls.outputs.dev_url }}"
+
+          psql "$DEV_URL" <<'EOF' || true
+          -- Re-enable triggers
+          SET session_replication_role = DEFAULT;
+
+          -- Restore FK constraints
+          ALTER TABLE IF EXISTS meeting_action_items
+            ADD CONSTRAINT IF NOT EXISTS meeting_action_items_task_id_fkey
+            FOREIGN KEY (task_id) REFERENCES tasks(id) ON DELETE SET NULL;
+
+          ALTER TABLE IF EXISTS next_action_suggestions
+            ADD CONSTRAINT IF NOT EXISTS next_action_suggestions_created_task_id_fkey
+            FOREIGN KEY (created_task_id) REFERENCES tasks(id) ON DELETE SET NULL;
+          EOF
+
+          echo "✅ Constraints restored"
 
       - name: Verify Data
         run: |
           echo "🔍 Verifying data..."
 
-          DEV_BRANCH_ID="17b178b9-bb9b-4ccd-a125-5e49398bb989"
-          BRANCH_INFO=$(supabase branches get $DEV_BRANCH_ID --project-ref ${{ secrets.SUPABASE_PROJECT_ID }} --output json --experimental || echo "{}")
-          NON_POOLING_URL=$(echo "$BRANCH_INFO" | jq -r '.POSTGRES_URL_NON_POOLING // empty')
-          DB_NAME=$(echo "$NON_POOLING_URL" | sed -n 's/.*\/\([^?]*\).*/\1/p')
-          DEV_DB_URL="postgres://postgres.${{ secrets.SUPABASE_PROJECT_ID }}:${{ secrets.SUPABASE_DB_PASSWORD }}@aws-0-us-west-1.pooler.supabase.com:5432/$DB_NAME"
+          DEV_URL="${{ steps.build-urls.outputs.dev_url }}"
 
-          # Check table counts
-          psql "$DEV_DB_URL" <<'EOF'
+          psql "$DEV_URL" <<'EOF'
           SELECT 'profiles' as table_name, COUNT(*) as count FROM profiles
-          UNION ALL
-          SELECT 'deals', COUNT(*) FROM deals
-          UNION ALL
-          SELECT 'contacts', COUNT(*) FROM contacts
-          UNION ALL
-          SELECT 'meetings', COUNT(*) FROM meetings
-          UNION ALL
-          SELECT 'activities', COUNT(*) FROM activities
-          UNION ALL
-          SELECT 'auth.users', COUNT(*) FROM auth.users
+          UNION ALL SELECT 'deals', COUNT(*) FROM deals
+          UNION ALL SELECT 'contacts', COUNT(*) FROM contacts
+          UNION ALL SELECT 'meetings', COUNT(*) FROM meetings
+          UNION ALL SELECT 'activities', COUNT(*) FROM activities
+          UNION ALL SELECT 'clerk_user_mapping', COUNT(*) FROM clerk_user_mapping
           ORDER BY table_name;
           EOF
 
@@ -200,11 +263,13 @@ jobs:
         run: |
           echo "## 🌱 Development-v2 Seeding Complete" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **Branch**: development-v2 (\`17b178b9-bb9b-4ccd-a125-5e49398bb989\`)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Migrations**: ✅ Applied" >> $GITHUB_STEP_SUMMARY
-          echo "- **Public Data**: ✅ Synced" >> $GITHUB_STEP_SUMMARY
-          echo "- **Auth Users**: ${{ inputs.include_auth == true && '✅ Synced' || '⏭️  Skipped' }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Status**: ${{ job.status == 'success' && '✅ Success' || '❌ Failed' }}" >> $GITHUB_STEP_SUMMARY
+          echo "| Property | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "|----------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Branch | development-v2 (\`$DEV_BRANCH_ID\`) |" >> $GITHUB_STEP_SUMMARY
+          echo "| Migrations | ${{ inputs.apply_migrations && '✅ Applied' || '⏭️ Skipped' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Public Data | ✅ Synced (${{ steps.export-data.outputs.dump_size }}) |" >> $GITHUB_STEP_SUMMARY
+          echo "| Auth Users | ${{ inputs.include_auth == 'true' && '✅ Synced' || '⏭️ Skipped (using Clerk)' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Status | ${{ job.status == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
 
       - name: Cleanup
         if: always()
